WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103071
[BlackBerry] Guard against a lost focusedNode that input handler isn't yet informed of.
https://bugs.webkit.org/show_bug.cgi?id=103071
Summary
[BlackBerry] Guard against a lost focusedNode that input handler isn't yet in...
Mike Fenton
Reported
2012-11-22 08:12:03 PST
Change is required in SelectionHandler::setCaretPosition.
Attachments
Patch
(2.24 KB, patch)
2012-11-22 09:04 PST
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-11-22 09:04:13 PST
Created
attachment 175685
[details]
Patch
Rob Buis
Comment 2
2012-11-22 09:22:42 PST
Comment on
attachment 175685
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2012-11-22 19:32:21 PST
Comment on
attachment 175685
[details]
Patch Clearing flags on attachment: 175685 Committed
r135554
: <
http://trac.webkit.org/changeset/135554
>
WebKit Review Bot
Comment 4
2012-11-22 19:32:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug