[BlackBerry] Guard against a lost focusedNode that input handler isn't yet informed of. https://bugs.webkit.org/show_bug.cgi?id=103071

Reviewed by Rob Buis.

Fix potential for a crash if input mode is active but
we can't get a focusedNode.

Reviewed Internally by Gen Mak.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::setCaretPosition):


Canonical link: https://commits.webkit.org/121215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135554 268f45cc-cd09-0410-ab3c-d52691b4dbfc